# diplom_without_struct

search_engine/: CMakeLists.txt  ConverterJSON.h  InvertedIndex.h  SearchServer.h  main.cpp
search_engine/Google_tests/: CMakeLists.txt  gtest.cpp
